--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@
 
     <section class="content-section container">
       <h2 class="section-header">ABOUT</h2>
+      <img class="about-web-image" src="Images/2077_about.jpeg" />
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dolorum
         nulla accusantium perferendis quam explicabo odit quisquam ea natus?
@@ -33,7 +34,6 @@
         accusamus et vel, necessitatibus doloribus optio. Odio nobis ad
         molestias.
       </p>
-      <img class="about-web-image" src="Images/2077_about.jpeg" />
       <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Distinctio qui
         consequuntur aut. Nobis debitis ipsum soluta sit itaque officiis impedit
@@ -48,27 +48,21 @@
       <div class="container main-footer-container">
         <h3 class="web-name">Gaming Freak</h3>
         <ul class="nav footer-nav">
-          <li>
-            <a href="https://www.youtube.com" target="_blank">
-              <img src="Images/Youtube Logo.png"
-              width="30"
-              height="30" />
-            </a>
-          </li>
-          <li>
-            <a href="https://www.facebook.com" target="_blank">
-              <img src="Images/Facebook Logo.png" 
-              width="30"
-              height="30"/>
-            </a>
-          </li>
-          <li>
-            <a href="https://twitter.com/?lang=en" target="_blank">
-              <img src="Images/Twitter Logo.png" 
-              width="30"
-              height="30"/>
-            </a>
-          </li>
+            <li>
+                <a href="https://www.youtube.com" target="_blank">
+                  <img src="Images/Youtube Logo.png" />
+                </a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com" target="_blank">
+                  <img src="Images/Facebook Logo.png" />
+                </a>
+              </li>
+              <li>
+                <a href="https://twitter.com/?lang=en" target="_blank">
+                  <img src="Images/Twitter Logo.png" />
+                </a>
+              </li>
         </ul>
       </div>
     </footer>
