--- a/store.html
+++ b/store.html
@@ -141,23 +141,17 @@
         <ul class="nav footer-nav">
             <li>
                 <a href="https://www.youtube.com" target="_blank">
-                  <img src="Images/Youtube Logo.png"
-                  width="30"
-                  height="30" />
+                  <img src="Images/Youtube Logo.png" />
                 </a>
               </li>
               <li>
                 <a href="https://www.facebook.com" target="_blank">
-                  <img src="Images/Facebook Logo.png" 
-                  width="30"
-                  height="30"/>
+                  <img src="Images/Facebook Logo.png" />
                 </a>
               </li>
               <li>
                 <a href="https://twitter.com/?lang=en" target="_blank">
-                  <img src="Images/Twitter Logo.png" 
-                  width="30"
-                  height="30"/>
+                  <img src="Images/Twitter Logo.png" />
                 </a>
               </li>
         </ul>
